wednesday feedback checkin

--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/basic-ha/basic-ha.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/basic-ha/basic-ha.ipynb
@@ -65,7 +65,46 @@
         {
             "cell_type": "markdown",
             "source": [
-                "**Step 0 - Confirm environment is properly configured**"
+                "**Step 0 - Confirm environment is properly configured** \r\n",
+                "\r\n",
+                "In this step, there are 3 parts:  \r\n",
+                "* Part A: Configure keyboard shortcut  \r\n",
+                "* Part B: Confirm correct configuration of Az PowerShell Module  \r\n",
+                "* Part C: Confirm correct configuration of ostress  "
+            ],
+            "metadata": {
+                "azdata_cell_guid": "4abe9908-1f04-48d7-9ee5-6ec362463d4a"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "\r\n",
+                "\r\n",
+                "**Part A: Configure keyboard shortcut**  \r\n",
+                "\r\n",
+                "\r\n",
+                "The following gif summarizes how to open Keyboard Shortcuts to the right. After the gif, there are step-by-step instructions.  \r\n",
+                "\r\n",
+                "![](./graphics/shortcutgif.gif)   \r\n",
+                "\r\n",
+                "First, in Azure Data Studio, go to **File** > **Preferences** > **Keyboard Shortcuts**.  \r\n",
+                "\r\n",
+                "![](./graphics/keyboardshortcuts.png)  \r\n",
+                "\r\n",
+                "Once this is open, you may find it easier to drag the **Keyboard Shortcuts** tab to the right, providing a split view.  \r\n",
+                "\r\n",
+                "![](./graphics/splitview.png)  \r\n",
+                "\r\n",
+                "Next, search for `terminal: run` and select the **+** button next to \"Terminal: Run Selected Text in Active Terminal\". select **CTRL** + **t** and then press **ENTER**.  \r\n",
+                "\r\n",
+                "![](./graphics/ctrlt.png)  \r\n",
+                "\r\n",
+                "You should now see `CTRL + T` under \"Keybinding\" for \"Terminal: Run Selected Text in Active Terminal\".   \r\n",
+                "\r\n",
+                "![](./graphics/keyboardshortcuts2.png)  \r\n",
+                "\r\n",
+                "You can now **close the \"Keyboard Shortcuts\" tab**, which will give you some screen real estate back.  "
             ],
             "metadata": {
                 "azdata_cell_guid": "2f0d4f1d-bc90-44f5-a1fb-d5d9d5639637"
@@ -74,6 +113,9 @@
         {
             "cell_type": "markdown",
             "source": [
+                "**Part B: Confirm correct configuration of Az PowerShell Module**\r\n",
+                "\r\n",
+                "\r\n",
                 "Confirm the [Az PowerShell Module](https://docs.microsoft.com/en-us/powershell/azure/install-az-ps?view=azps-3.4.00) is installed with version 3.4.0+. "
             ],
             "metadata": {
@@ -100,6 +142,8 @@
         {
             "cell_type": "markdown",
             "source": [
+                "**Part C: Confirm correct configuration of ostress**\r\n",
+                "\r\n",
                 "Confirm [RMUtils tool (which contains ostress)](https://www.microsoft.com/en-us/download/details.aspx?id=4511) is installed and has been added to the Path. "
             ],
             "metadata": {
@@ -118,7 +162,7 @@
                 {
                     "output_type": "stream",
                     "name": "stdout",
-                    "text": "OSTRESS, A Generic ODBC-Based Stress/Replay Utility.\nVersion 9.04.0051 built for x64.\nCopyright ■ 1997-2014 Microsoft. All Rights Reserved\n            Computer: win-vm01\n         Base Module: C:\\Program Files\\Microsoft Corporation\\RMLUtils\\ostress.exe\n          Process Id: 7084\n Active proc mask(0): 0x00000003\n        Architecture: 9\n           Page size: 4096\n                CPUs: 2\n    Processor groups: 1\n        Highest node: 0\n  Proximity: 00  Node: 00\n---------------------------------------\n               Group: 0\n---------------------------------------\n        Package mask: 0x00000003\n        Processor(s): 0x00000003 Function units: Shared\n        Processor(s): 0x00000003 assigned to Numa node: 0\nCurrent time bias: 0 minutes 0.00 hours DST not used \nNOTE: All command line arguments are case sensitive.  No space is allowed between the parameter switch and its specified value.\n\nUSAGE:\n\n  -S name of Microsoft SQL Server server to connect to\n  -D ODBC data source name to use for connection\n  -E use Windows auhentication to connect (default)\n  -U login ID\n  -P password\n  -d database name\n  -Q\"single batch query to process\"\n  -i SQL/RML file name or file wildcard to process\n  -n number of connections processing each input file/query - stress mode\n  -r number of iterations for each connection to execute its input file/query\n  -o output directory to write query results and log file\n  -l login timeout (sec)\n  -L integer value representing the language id\n  -t query timeout (sec)\n  -p network packet size for connections - SQL Server only\n  -q quiet mode; suppress all query output\n  -v verbose mode; show additional diagnostic output\n  -m [stress | replay] run in stress or replay mode\n  -a default password to use for SQL authentication during replay\n  -c control file name - required for replay mode\n  -T enable trace flag\n  -fx write query results as XML\n  -N disable \"OSTRESS exiting\" message\n  -M Advanced setting: max threads allowed, 0 is default setting.\n  -b Stop processing if an error is encountered during query execution.\n\nEXAMPLE: ostress -E -dpubs -Q\"select * from authors\"\nOSTRESS exiting due to error (-6)\n"
+                    "text": "OSTRESS, A Generic ODBC-Based Stress/Replay Utility.\nVersion 9.04.0051 built for x64.\nCopyright ■ 1997-2014 Microsoft. All Rights Reserved\n            Computer: win-vm01\n         Base Module: C:\\Program Files\\Microsoft Corporation\\RMLUtils\\ostress.exe\n          Process Id: 2188\n Active proc mask(0): 0x00000003\n        Architecture: 9\n           Page size: 4096\n                CPUs: 2\n    Processor groups: 1\n        Highest node: 0\n  Proximity: 00  Node: 00\n---------------------------------------\n               Group: 0\n---------------------------------------\n        Package mask: 0x00000003\n        Processor(s): 0x00000003 Function units: Shared\n        Processor(s): 0x00000003 assigned to Numa node: 0\nCurrent time bias: 0 minutes 0.00 hours DST not used \nNOTE: All command line arguments are case sensitive.  No space is allowed between the parameter switch and its specified value.\n\nUSAGE:\n\n  -S name of Microsoft SQL Server server to connect to\n  -D ODBC data source name to use for connection\n  -E use Windows auhentication to connect (default)\n  -U login ID\n  -P password\n  -d database name\n  -Q\"single batch query to process\"\n  -i SQL/RML file name or file wildcard to process\n  -n number of connections processing each input file/query - stress mode\n  -r number of iterations for each connection to execute its input file/query\n  -o output directory to write query results and log file\n  -l login timeout (sec)\n  -L integer value representing the language id\n  -t query timeout (sec)\n  -p network packet size for connections - SQL Server only\n  -q quiet mode; suppress all query output\n  -v verbose mode; show additional diagnostic output\n  -m [stress | replay] run in stress or replay mode\n  -a default password to use for SQL authentication during replay\n  -c control file name - required for replay mode\n  -T enable trace flag\n  -fx write query results as XML\n  -N disable \"OSTRESS exiting\" message\n  -M Advanced setting: max threads allowed, 0 is default setting.\n  -b Stop processing if an error is encountered during query execution.\n\nEXAMPLE: ostress -E -dpubs -Q\"select * from authors\"\nOSTRESS exiting due to error (-6)\n"
                 }
             ],
             "execution_count": 2
@@ -130,7 +174,7 @@
                 "\r\n",
                 "In the below cell, replace the `0406` with the unique Workshop ID (e.g. `0406`, `168563`, etc.) you are using for the workshop. Also, add your subscription ID and your SQL authentication password for the logical server.   \r\n",
                 "\r\n",
-                "> Note: If you have special characters in your password (especially the `$` character), you may need to escape them by placing a **`** before. For example, if my password is `$pass1w0rd`, I need to enter as **`$pass1w0rd**. Otherwise, you may have authentication issues in future steps.  "
+                "> Note: If you have special characters in your password, you may need to escape them by placing a **`** before. For example, if my password is `$pass1w0rd`, I need to enter as **`$pass1w0rd**. Otherwise, you may have authentication issues in future steps.  "
             ],
             "metadata": {
                 "azdata_cell_guid": "6abe1497-8822-481b-b0cf-35581ca21b4e"
@@ -157,8 +201,14 @@
                 "azdata_cell_guid": "6b2b94fd-470d-462e-bc9e-721a5b1f7b28",
                 "tags": []
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "Variables Received\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
@@ -194,11 +244,7 @@
                 "\r\n",
                 "The ostress workload below essentially connects and runs a simple query 50,000 times. Since this outputs essentially 50,000 results, running this in the Notebook is **not** a good idea. It will make the notebook huge, and you won't be able to run other cells (i.e. the failover command) while it is running.  \r\n",
                 "\r\n",
-                "Instead, you will use an Azure Data Studio trick to run certain cells in the integrated terminal in Azure Data Studio.  \r\n",
-                "\r\n",
-                "The following gif summarizes how to open Keyboard Shortcuts to the right. After the gif, there are step-by-step instructions.  \r\n",
-                "\r\n",
-                "![](./graphics/shortcutgif.gif)  \r\n",
+                "Instead, you will use an Azure Data Studio trick to run certain cells in the integrated terminal in Azure Data Studio. You already set up this shortcut in **Step 0**.    \r\n",
                 "\r\n",
                 ""
             ],
@@ -209,34 +255,9 @@
         {
             "cell_type": "markdown",
             "source": [
-                "First, in Azure Data Studio, go to **File** > **Preferences** > **Keyboard Shortcuts**.  \r\n",
+                "Now things get interesting from a context-perspective. We want to run the ostress workload in the terminal, but the terminal maintains a separate context from the PowerShell notebook. That means the variables/configurations you set in the previous two cells, **have not been run in the terminal context**. In order to do this, for the two cells above, labeled **Cell A** and **Cell B** (with comments), click into the text. Then, select all the text (you can use `CTRL` + `a`) and use your new shortcut (use `CTRL` + `t`). You should see a terminal appear in the bottom section of your Azure Data Studio window, and you should see the results.  \r\n",
                 "\r\n",
-                "![](./graphics/keyboardshortcuts.png)  \r\n",
-                "\r\n",
-                "Once this is open, you may find it easier to drag the **Keyboard Shortcuts** tab to the right, providing a split view.  \r\n",
-                "\r\n",
-                "![](./graphics/splitview.png)  \r\n",
-                "\r\n",
-                "Next, search for `terminal: run` and select the **+** button next to \"Terminal: Run Selected Text in Active Terminal\". select **CTRL** + **t** and then press **ENTER**.  \r\n",
-                "\r\n",
-                "![](./graphics/ctrlt.png)  \r\n",
-                "\r\n",
-                "You should now see `CTRL + T` under \"Keybinding\" for \"Terminal: Run Selected Text in Active Terminal\".   \r\n",
-                "\r\n",
-                "![](./graphics/keyboardshortcuts2.png)  \r\n",
-                "\r\n",
-                "You can now **close the \"Keyboard Shortcuts\" tab**, which will give you some screen real estate back.  "
-            ],
-            "metadata": {
-                "azdata_cell_guid": "30935d72-affd-4c92-9731-ea542be02e50"
-            }
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "Now things get interesting. We want to run the ostress workload in the terminal, but the terminal maintain a separate context from the PowerShell notebook. That means the variables/configurations you set in the previous two cells, **have not been run in the terminal context**. In order to do this, for the two cells above, labeled **Cell A** and **Cell B** (with comments), click into the text. Then, select all the text (you can use `CTRL` + `a`) and use your new shortcut (use `CTRL` + `t`). You should see a terminal appear in the bottom section of your Azure Data Studio window, and you should see .  \r\n",
-                "\r\n",
-                "Now, you will do the same for the following cell: Select all the text (you can use `CTRL` + `a`) and use your new shortcut (use `CTRL` + `t`) to run the ostress workload in your integrated terminal. **Do not use the \"Play\" button to run this cell - use the shortcut**.   \r\n",
+                "Now, you will do the same for the following cell below: Select all the text (you can use `CTRL` + `a`) and use your new shortcut (use `CTRL` + `t`) to run the ostress workload in your integrated terminal. **Do not use the \"Play\" button to run this cell - use the shortcut**.   \r\n",
                 "\r\n",
                 "If, at any time, you want to stop running the ostress workload before it is complete, you can go into the terminal and press `CTRL` + `c`.  \r\n",
                 "\r\n",
@@ -290,7 +311,7 @@
                     "text": ""
                 }
             ],
-            "execution_count": 6
+            "execution_count": 5
         },
         {
             "cell_type": "markdown",
