--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
@@ -205,6 +205,8 @@
                 "\r\n",
                 "Once you've updated the above query in the Log Analytics query editor, select **Run** and review the results. It should be similar to below, but with a different date/time.   \r\n",
                 "\r\n",
+                "> Note: If you see other `DROP`s, you should select the one related to the table you just dropped.  \r\n",
+                "\r\n",
                 "![](./graphics/laresults.png)  \r\n",
                 "\r\n",
                 "> NOTE: This can take a few minutes to show up here. If you are waiting for longer than 3-5 minutes, if you left the query window open in SSMS when you dropped the table, you can grab the drop time from there. But know, that in a real world situation, it is highly unlikely you will be able to get to that window with the completion time, so using auditing can help greatly.  \r\n",
@@ -313,7 +315,7 @@
                 "\r\n",
                 "Now, you're very familiar with how to rename databases in SSMS, but here you will see how it can be easily done using the Azure CLI.  \r\n",
                 "\r\n",
-                "> Note: If at any point your database appears unavailable (e.g. you can't connect when you refresh the connection), it could be due to updates happening to the DNS table. So while the database isn't physically unavailable, it is unresolvable. If you wait a minute or so, you should be able to resume normal activities.  \r\n",
+                "> Note: If at any point your database appears unavailable (e.g. you can't connect to the databases in SSMS if you refresh the connection), it could be due to updates happening to the DNS table. So while the database isn't physically unavailable, it is unresolvable. If you wait a minute or so, you should be able to resume normal activities.  \r\n",
                 "\r\n",
                 ""
             ],
